type ahead api changes